fix-img-quienes-somos-alignment

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -94,6 +94,7 @@ main {
       width: 65%;
       display: flex;
       gap: 3em;
+      align-items: center;
 
       img {
         height: 350px;
